fix: 修复了外部函数导致的错误