@@ -22,7 +22,7 @@ import java.util.*;
  * 聪明疾旋鼬 CFG 简化器
  * 会尝试删除无用的 block 和指令、合并无用的分支、合并无用的 phi 节点
  */
-@Pass(disable = true)
+@Pass
 public class SmartChilletSimplifyCFG implements CompilePass<IceFunction> {
 
     private static ArrayList<IceBlock> allBlocks;
@@ -37,7 +37,7 @@ public class SmartChilletSimplifyCFG implements CompilePass<IceFunction> {
 
         while (!queue.isEmpty()) {
             IceBlock block = queue.poll();
-            IceInstruction exitBlock = block.getInstructions().get(block.getInstructions().size() - 1);
+            IceInstruction exitBlock = block.getInstructions().getLast();
 
             if (exitBlock instanceof IceBranchInstruction br) {
                 if (!br.isConditional()) {
